syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ele.raft";
option java_outer_classname = "RaftProto";
option objc_class_prefix = "RAFT";

package raft;

// The raft-consensus service definition.
service Consensus {
    // 候选者发起投票
    rpc RequestVote (VoteRequest) returns (VoteReply) {
    }

    // Leader发起同步
    rpc AppendEntries (LeaderRequest) returns (FollowerReply) {
    }
}

// 投票请求
message VoteRequest {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 latLogTerm = 4;
}

// 投票答复
message VoteReply {
    int32 term = 1;
    bool voteGranted = 2;
}

// Leader同步请求
message LeaderRequest {
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated Entry entries = 5;
    int32 leaderCommit = 6;
}

// Follower回应
message FollowerReply {
    int32 term = 1;
    bool success = 2;
    int32 matchIndex = 3;
    bool stepDown = 4;
    int32 suggestNextIndex = 5;
    int32 responseTocommandId = 6;
}

// 日志
message Entry {
    int32 term = 1;
    int32 index = 2;
    int32 commandId = 3;
    string command = 4;
}